compiler/src/parser.c
// The sole job of the parser for Onyx is to submit nodes to the
// entity heap for further processing. These nodes include things
// such as procedure definitions, string literals, struct definitions
// and declarations to be introduced into scopes.

#include "astnodes.h"
#include "parser.h"
#include "lex.h"
#include "errors.h"
#include "utils.h"

#define make_node(nclass, kind)             onyx_ast_node_new(parser->allocator, sizeof(nclass), kind)
// :LinearTokenDependent
#define peek_token(ahead)                   (parser->curr + ahead)

static AstNode error_node = { Ast_Kind_Error, 0, NULL, NULL };

#define ENTITY_SUBMIT(node)                 (submit_entity_in_scope(parser, (AstNode *) (node), parser->current_scope, parser->package))
#define ENTITY_SUBMIT_IN_SCOPE(node, scope) (submit_entity_in_scope(parser, (AstNode *) (node), scope, parser->package))

#undef ONYX_ERROR
#undef ONYX_WARNING
#define ONYX_ERROR(pos, rank, ...) (onyx_report_error(parser->context, (pos), (rank), __VA_ARGS__))
#define ONYX_WARNING(pos, ...) (onyx_report_warning(parser->context, (pos), __VA_ARGS__))

#undef BH_INTERNAL_ALLOCATOR
#define BH_INTERNAL_ALLOCATOR (parser->context->gp_alloc)

void submit_entity_in_scope(OnyxParser* parser, AstNode* node, Scope* scope, Package* package) {
    if (bh_arr_length(parser->alternate_entity_placement_stack) == 0) {
        add_entities_for_node(&parser->context->entities, NULL, node, scope, package);

    } else {
        bh_arr(Entity *) *entity_array = bh_arr_last(parser->alternate_entity_placement_stack);
        if (entity_array) {
            add_entities_for_node(&parser->context->entities, entity_array, node, scope, package);
        }
    }
}

// Parsing Utilities
static void consume_token(OnyxParser* parser);
static OnyxToken* expect_token(OnyxParser* parser, TokenType token_type);
static b32 consume_token_if_next(OnyxParser* parser, TokenType token_type);
static b32 next_tokens_are(OnyxParser* parser, i32 n, ...);
static OnyxToken* find_matching_paren(OnyxToken* paren);

static AstNumLit*     parse_int_literal(OnyxParser* parser);
static AstNumLit*     parse_float_literal(OnyxParser* parser);
static b32            parse_possible_struct_literal(OnyxParser* parser, AstTyped* left, AstTyped** ret);
static b32            parse_possible_array_literal(OnyxParser* parser, AstTyped* left, AstTyped** ret);
static b32            parse_possible_unary_field_access(OnyxParser* parser, AstTyped** ret);
static void           parse_arguments(OnyxParser* parser, TokenType end_token, Arguments* args);
static AstTyped*      parse_factor(OnyxParser* parser);
static AstTyped*      parse_compound_assignment(OnyxParser* parser, AstTyped* lhs);
static AstTyped*      parse_compound_expression(OnyxParser* parser, b32 assignment_allowed);
static AstTyped*      parse_expression(OnyxParser* parser, b32 assignment_allowed);
static AstIfWhile*    parse_if_stmt(OnyxParser* parser);
static AstIfWhile*    parse_while_stmt(OnyxParser* parser);
static AstFor*        parse_for_stmt(OnyxParser* parser);
static AstSwitchCase* parse_case_stmt(OnyxParser* parser);
static AstSwitch*     parse_switch_stmt(OnyxParser* parser, b32 switch_is_expr);
static i32            parse_possible_symbol_declaration(OnyxParser* parser, AstNode** ret);
static AstReturn*     parse_return_stmt(OnyxParser* parser);
static AstBlock*      parse_block(OnyxParser* parser, b32 make_a_new_scope, char* block_name);
static AstNode*       parse_statement(OnyxParser* parser);
static void           parse_polymorphic_variable(OnyxParser* parser, AstType*** next_insertion);
static AstType*       parse_type(OnyxParser* parser);
static AstTypeOf*     parse_typeof(OnyxParser* parser);
static AstStructType* parse_struct(OnyxParser* parser);
static AstUnionType*  parse_union(OnyxParser* parser);
static AstInterface*  parse_interface(OnyxParser* parser);
static AstConstraint* parse_constraint(OnyxParser* parser);
static void           parse_constraints(OnyxParser* parser, ConstraintContext *constraints);
static void           parse_function_params(OnyxParser* parser, AstFunction* func);
static b32            parse_possible_directive(OnyxParser* parser, const char* dir);
static b32            parse_possible_function_definition_no_consume(OnyxParser* parser);
static b32            parse_possible_function_definition(OnyxParser* parser, AstTyped** ret);
static b32            parse_possible_quick_function_definition_no_consume(OnyxParser* parser);
static b32            parse_possible_quick_function_definition(OnyxParser* parser, AstTyped** ret);
static AstFunction*   parse_function_definition(OnyxParser* parser, OnyxToken* token);
static AstTyped*      parse_global_declaration(OnyxParser* parser);
static AstEnumType*   parse_enum_declaration(OnyxParser* parser);
static AstMacro*      parse_macro(OnyxParser* parser);
static AstIf*         parse_static_if_stmt(OnyxParser* parser, b32 parse_block_as_statements);
static AstMemRes*     parse_memory_reservation(OnyxParser* parser, OnyxToken* symbol, b32 is_thread_local);
static AstTyped*      parse_top_level_expression(OnyxParser* parser);
static AstBinding*    parse_top_level_binding(OnyxParser* parser, OnyxToken* symbol);
static void           parse_top_level_statement(OnyxParser* parser);
static AstPackage*    parse_package_expression(OnyxParser* parser);
static void           parse_top_level_statements_until(OnyxParser* parser, TokenType tt);
static void           parse_import_statement(OnyxParser* parser, OnyxToken *token);

static void consume_token(OnyxParser* parser) {
    if (parser->hit_unexpected_token) return;

    parser->prev = parser->curr;
    // :LinearTokenDependent
    parser->curr++;
    while (parser->curr->type == Token_Type_Comment) {
        parser->curr++;
    }
}

static OnyxToken* find_matching_paren(OnyxToken* paren) {
    TokenType match = 0;
    switch ((u16) paren->type) {
        case '(': match = ')'; break;
        case '[': match = ']'; break;
        case '{': match = '}'; break;
        case '<': match = '>'; break;
        default: return NULL;
    }

    i32 paren_count = 1;
    i32 i = 1;
    while (paren_count > 0) {
        // :LinearTokenDependent
        TokenType type = (paren + i)->type;
        if (type == Token_Type_End_Stream) return NULL;

        if (type == paren->type) paren_count++;
        else if (type == match)  paren_count--;

        i++;
    }

    // :LinearTokenDependent
    return paren + (i - 1);
}

// NOTE: This advances to next token no matter what
static OnyxToken* expect_token(OnyxParser* parser, TokenType token_type) {
    if (parser->hit_unexpected_token) return NULL;

    OnyxToken* token = parser->curr;
    if (token_type == ';' && token->type == Token_Type_End_Stream) {
        return token;
    }

    consume_token(parser);

    if (token->type == Token_Type_Inserted_Semicolon) {
        if (token_type == ';' || token_type == ',') {
            return token;
        } else {
            token = parser->curr;
            consume_token(parser);
        }
    }

    if (token->type != token_type) {
        ONYX_ERROR(token->pos, Error_Critical, "expected token '%s', got '%s'.", token_type_name(token_type), token_name(token));
        parser->hit_unexpected_token = 1;
        // :LinearTokenDependent
        parser->curr = &parser->tokenizer->tokens[bh_arr_length(parser->tokenizer->tokens) - 1];
        return NULL;
    }

    return token;
}

static b32 consume_token_if_next(OnyxParser* parser, TokenType token_type) {
    if (parser->hit_unexpected_token) return 0;

    if (parser->curr->type == Token_Type_Inserted_Semicolon && token_type == ';') {
        consume_token(parser);
        return 1;
    }

    if (parser->curr->type == token_type) {
        consume_token(parser);
        return 1;
    } else {
        return 0;
    }
}

static void consume_tokens(OnyxParser* parser, i32 n) {
    fori (i, 0, n) {
        if (parser->curr->type == Token_Type_Inserted_Semicolon) {
            i--;
        }

        consume_token(parser);
    }
}

static b32 next_tokens_are(OnyxParser* parser, i32 n, ...) {
    va_list va;
    va_start(va, n);

    i32 matched = 1;
    i32 skipped = 0;

    // BUG: This does not take into consideration comments that can occur between any tokens.
    fori (i, 0, n) {
        TokenType expected_type = va_arg(va, TokenType);
        OnyxToken *peeked_token = peek_token(i + skipped);

        if (peeked_token->type != expected_type) {
            matched = 0;
            break;
        }
    }

    va_end(va);
    return matched;
}


static void expect_no_stored_tags_pos(OnyxParser *parser, OnyxFilePos pos) {
    if (bh_arr_length(parser->stored_tags) > 0) {
        ONYX_ERROR(pos, Error_Critical, "#tag is not allowed on this element.");
        parser->hit_unexpected_token = 1;
    }
}

static void expect_no_stored_tags(OnyxParser *parser) {
    expect_no_stored_tags_pos(parser, parser->curr->pos);
}

static b32 parse_possible_tag(OnyxParser *parser) {
    b32 parsed = 0;
    while (parse_possible_directive(parser, "tag") || consume_token_if_next(parser, '@')) {
        parser->tag_depth += 1;
        parsed = 1;

        do {
            AstTyped* expr = parse_expression(parser, 0);
            bh_arr_push(parser->stored_tags, expr);
        } while (consume_token_if_next(parser, ','));

        parser->tag_depth -= 1;
    }

    return parsed;
}

static void flush_stored_tags(OnyxParser *parser, bh_arr(AstTyped *) *out_arr) {
    //
    // When tag_depth > 0, no tags will be added to the element.
    // This happens if you have a something like so,
    //
    // #tag "asdf"
    // #tag handler.{ (x: i32) => x * 2 }
    // foo :: () { ... }
    //
    // In this situation, the inner procedure defined in the second
    // tag should NOT consume the "asdf" tag.
    //
    if (bh_arr_length(parser->stored_tags) == 0 || parser->tag_depth > 0) return;

    bh_arr(AstTyped *) arr = *out_arr;

    if (arr == NULL) {
        bh_arr_new(parser->allocator, arr, bh_arr_length(parser->stored_tags));
    }

    bh_arr_each(AstTyped *, pexpr, parser->stored_tags) {
        bh_arr_push(arr, *pexpr);
    }

    bh_arr_clear(parser->stored_tags);

    *out_arr = arr;
}

static void flush_doc_tokens(OnyxParser *parser, const char **out_string, OnyxToken **out_token) {
    if (parser->last_documentation_token) {
        if (out_token) *out_token = parser->last_documentation_token;
        parser->last_documentation_token = NULL;
    }

    if (bh_arr_is_empty(parser->documentation_tokens)) {
        if (out_string) *out_string = "";
        return;
    }

    if (!out_string) {
        bh_arr_clear(parser->documentation_tokens);
        return;
    }

    // Build the full doc string from the tokens

    i32 doc_len = 0;
    bh_arr_each(OnyxToken *, ptoken, parser->documentation_tokens) {
        doc_len += (*ptoken)->length;
        doc_len += 1; // For the \n
    }

    bh_buffer str_buf;
    bh_buffer_init(&str_buf, parser->allocator, doc_len + 1); // +1 for null byte

    bh_arr_each(OnyxToken *, ptoken, parser->documentation_tokens) {
        bh_buffer_append(&str_buf, (*ptoken)->text, (*ptoken)->length);
        bh_buffer_write_byte(&str_buf, '\n');
    }
    bh_arr_clear(parser->documentation_tokens);

    bh_buffer_write_byte(&str_buf, 0);
    *out_string = (const char *) str_buf.data;
}


static u64 parse_int_token(OnyxToken *int_token) {
    u64 value = 0;

    token_toggle_end(int_token);

    char *buf = int_token->text;
    i32     i = 0;
    i64  base = 10;

    if (buf[0] == '0' && buf[1] == 'x') {
        base = 16;
        i = 2;
    }

    while (i < int_token->length) {
        char c = buf[i++];

        if ('0' <= c && c <= '9') { value *= base; value += (c - '0'); }
        if ('A' <= c && c <= 'Z') { value *= base; value += ((c - 'A') + 10); }
        if ('a' <= c && c <= 'z') { value *= base; value += ((c - 'a') + 10); }
    }

    token_toggle_end(int_token);
    return value;
}

static f64 parse_float_sign(char **s) {
    if (**s == '-') {
        *s += 1;
        return -1;
    }

    if (**s == '+') {
        *s += 1;
        return 1;
    }

    return 1;
}

static f64 parse_float_digit(char **s, i32 *digit_count) {
    f64 value = 0;
    while (**s) {
        char c = **s;
        if ('0' <= c && c <= '9') {
            value = value * 10 + (c - '0');
            *s += 1;
            *digit_count += 1;

        }
        else if (c == '_') { *s += 1; continue; }
        else { break; }
    }

    return value;
}

static f64 parse_float_token(OnyxToken *float_token) {
    token_toggle_end(float_token);

    char *s = float_token->text;
    i32 digit_count = 0;

    f64 sign  = parse_float_sign(&s);
    f64 value = parse_float_digit(&s, &digit_count);

    if (*s == '.') {
        s++;
        digit_count = 0;
        f64 fraction = parse_float_digit(&s, &digit_count);
        while (digit_count > 0) {
            digit_count -= 1;
            fraction /= 10;
        }
        value += fraction;
    }

    value *= sign;

    if (*s == 'e') {
        s++;

        digit_count = 0;
        f64 exponent_sign = parse_float_sign(&s);
        f64 exponent      = parse_float_digit(&s, &digit_count);

        if (exponent_sign > 0) {
            while (exponent > 0) {
                value *= 10;
                exponent -= 1;
            }
        } else {
            while (exponent > 0) {
                value /= 10;
                exponent -= 1;
            }
        }
    }

    token_toggle_end(float_token);
    return value;
}

static AstNumLit* parse_int_literal(OnyxParser* parser) {
    AstNumLit* int_node = make_node(AstNumLit, Ast_Kind_NumLit);
    int_node->token = expect_token(parser, Token_Type_Literal_Integer);
    int_node->flags |= Ast_Flag_Comptime;

    int_node->value.l = parse_int_token(int_node->token);
    int_node->type_node = (AstType *) &parser->context->basic_types.type_int_unsized;

    // NOTE: Hex literals are unsigned.
    if (int_node->token->length >= 2 && int_node->token->text[1] == 'x') {
        int_node->was_hex_literal = 1;
    }
    return int_node;
}

static AstNumLit* parse_float_literal(OnyxParser* parser) {
    AstNumLit* float_node = make_node(AstNumLit, Ast_Kind_NumLit);
    float_node->token = expect_token(parser, Token_Type_Literal_Float);
    float_node->flags |= Ast_Flag_Comptime;

    AstType* type = (AstType *) &parser->context->basic_types.type_float_unsized;

    float_node->value.d = parse_float_token(float_node->token);

    if (float_node->token->text[float_node->token->length - 1] == 'f') {
        type = (AstType *) &parser->context->basic_types.type_f32;
        float_node->value.f = float_node->value.d;
    }

    float_node->type_node = type;
    return float_node;
}

static b32 parse_possible_directive(OnyxParser* parser, const char* dir) {
    if (!next_tokens_are(parser, 2, '#', Token_Type_Symbol)) return 0;

    OnyxToken* sym = peek_token(1);

    b32 match = (strlen(dir) == (u64) sym->length) && (strncmp(dir, sym->text, sym->length) == 0);
    if (match) consume_tokens(parser, 2);

    return match;
}

static b32 parse_possible_struct_literal(OnyxParser* parser, AstTyped* left, AstTyped** ret) {
    if (!next_tokens_are(parser, 2, '.', '{')) return 0;

    AstStructLiteral* sl = make_node(AstStructLiteral, Ast_Kind_Struct_Literal);
    sl->token = parser->curr;
    sl->stnode = left;

    arguments_initialize(parser->context, &sl->args);

    expect_token(parser, '.');
    expect_token(parser, '{');

    if (consume_token_if_next(parser, Token_Type_Dot_Dot)) {
        sl->extension_value = parse_expression(parser, 0);

        if (peek_token(0)->type != '}') {
            expect_token(parser, ',');
        }
    }

    parse_arguments(parser, '}', &sl->args);

    if (sl->extension_value && bh_arr_length(sl->args.values) > 0) {
        ONYX_ERROR(sl->token->pos, Error_Critical, "All initializers must be named when using '..value' in a struct literal.");
    }

    *ret = (AstTyped *) sl;
    return 1;
}

static b32 parse_possible_array_literal(OnyxParser* parser, AstTyped* left, AstTyped** ret) {
    if (!next_tokens_are(parser, 2, '.', '[')) return 0;

    AstArrayLiteral* al = make_node(AstArrayLiteral, Ast_Kind_Array_Literal);
    al->token = parser->curr;
    al->atnode = left;

    bh_arr_new(parser->context->gp_alloc, al->values, 4);
    fori (i, 0, 4) al->values[i] = NULL;

    expect_token(parser, '.');
    expect_token(parser, '[');
    while (!consume_token_if_next(parser, ']')) {
        if (parser->hit_unexpected_token) return 1;

        AstTyped* value = parse_expression(parser, 0);
        bh_arr_push(al->values, value);

        if (parser->curr->type != ']')
            expect_token(parser, ',');
    }

    *ret = (AstTyped *) al;
    return 1;
}

static b32 parse_possible_unary_field_access(OnyxParser* parser, AstTyped** ret) {
    if (!next_tokens_are(parser, 2, '.', Token_Type_Symbol)) return 0;

    AstUnaryFieldAccess* ufl = make_node(AstUnaryFieldAccess, Ast_Kind_Unary_Field_Access);
    expect_token(parser, '.');
    ufl->token = expect_token(parser, Token_Type_Symbol);

    *ret = (AstTyped *) ufl;
    return 1;
}

static void parse_arguments(OnyxParser* parser, TokenType end_token, Arguments* args) {
    while (!consume_token_if_next(parser, end_token)) {
        if (parser->hit_unexpected_token) return;

        //
        // This has a weird condition to avoid the problem of using a quick function as an argument:
        //     f(x => x + 1)
        // This shouldn't be a named argument, but this should:
        //     f(g = x => x + 1)
        //
        if (next_tokens_are(parser, 2, Token_Type_Symbol, '=')) {
            OnyxToken* name = expect_token(parser, Token_Type_Symbol);
            expect_token(parser, '=');

            AstNamedValue* named_value = make_node(AstNamedValue, Ast_Kind_Named_Value);
            named_value->token = name;
            named_value->value = parse_expression(parser, 0);

            bh_arr_push(args->named_values, named_value);

        } else {
            AstTyped* value = parse_expression(parser, 0);
            bh_arr_push(args->values, value);
        }

        if (parser->curr->type != end_token)
            expect_token(parser, ',');
    }
}

static b32 value_is_placeholder(AstTyped *arg) {
    if (arg->kind != Ast_Kind_Symbol) return 0;
    if (arg->token->length > 1) return 0;
    if (arg->token->text[0] != '_') return 0;
    return 1;
}

static AstCall* parse_function_call(OnyxParser *parser, AstTyped *callee) {
    AstCall* call_node = make_node(AstCall, Ast_Kind_Call);
    call_node->token = expect_token(parser, '(');
    call_node->callee = callee;

    arguments_initialize(parser->context, &call_node->args);

    parse_arguments(parser, ')', &call_node->args);

    // while (consume_token_if_next(parser, '!')) {
    //     AstCodeBlock* code_block = make_node(AstCodeBlock, Ast_Kind_Code_Block);
    //     code_block->token = parser->curr;
    //     code_block->type_node = parser->context->builtins.code_type;

    //     code_block->code = (AstNode *) parse_block(parser, 1, NULL);
    //     ((AstBlock *) code_block->code)->rules = Block_Rule_Code_Block;
    //     bh_arr_push(call_node->args.values, (AstTyped *) code_block);
    // }

    // Wrap expressions in AstArgument
    bh_arr_each(AstTyped *, arg, call_node->args.values) {
        if ((*arg) == NULL) continue;

        if (value_is_placeholder(*arg)) {
            if (call_node->placeholder_argument_position > 0) {
                ONYX_ERROR((*arg)->token->pos, Error_Critical, "Cannot have more than one placeholder argument ('_').");
            }

            call_node->placeholder_argument_position = (arg - call_node->args.values) + 1;
            *arg = NULL;
        } else {
            *arg = (AstTyped *) make_argument(parser->context, *arg);
        }
    }

    bh_arr_each(AstNamedValue *, named_value, call_node->args.named_values) {
        if ((*named_value)->value == NULL) continue;
        (*named_value)->value = (AstTyped *) make_argument(parser->context, (AstTyped *) (*named_value)->value);
    }

    return call_node;
}

static b32 parse_placeholder(OnyxParser* parser) {
    OnyxToken *sym = peek_token(0);
    if (sym->type != Token_Type_Symbol) return 0;
    if (sym->length != 1) return 0;
    if (sym->text[0] != '_') return 0;

    consume_token(parser);
    return 1;
}

static AstTyped* parse_factor(OnyxParser* parser) {
    AstTyped* retval = NULL;

    consume_token_if_next(parser, Token_Type_Inserted_Semicolon);

    switch ((u16) parser->curr->type) {
        case '(': {
            if (parse_possible_function_definition(parser, &retval)) {
                retval->flags |= Ast_Flag_Function_Is_Lambda;
                ENTITY_SUBMIT(retval);
                break;
            }
            if (parse_possible_quick_function_definition(parser, &retval)) {
                retval->flags |= Ast_Flag_Function_Is_Lambda;
                ENTITY_SUBMIT(retval);
                break;
            }

            consume_token(parser);
            retval = parse_compound_expression(parser, 0);
            expect_token(parser, ')');
            break;
        }

        case '-': {
            AstUnaryOp* negate_node = make_node(AstUnaryOp, Ast_Kind_Unary_Op);
            negate_node->operation = Unary_Op_Negate;
            negate_node->token     = expect_token(parser, '-');
            negate_node->expr      = parse_factor(parser);

            retval = (AstTyped *) negate_node;
            break;
        }

        case '!': {
            AstUnaryOp* not_node = make_node(AstUnaryOp, Ast_Kind_Unary_Op);
            not_node->operation = Unary_Op_Not;
            not_node->token = expect_token(parser, '!');
            not_node->expr = parse_factor(parser);

            retval = (AstTyped *) not_node;
            break;
        }

        case '~': {
            AstUnaryOp* not_node = make_node(AstUnaryOp, Ast_Kind_Unary_Op);
            not_node->operation = Unary_Op_Bitwise_Not;
            not_node->token = expect_token(parser, '~');
            not_node->expr = parse_factor(parser);

            retval = (AstTyped *) not_node;
            break;
}

        case '*': {
            AstDereference* deref_node = make_node(AstDereference, Ast_Kind_Dereference);
            deref_node->token = expect_token(parser, '*');
            deref_node->expr  = parse_factor(parser);

            retval = (AstTyped *) deref_node;
            break;
        }

        case '&':
        case '^': {
            AstAddressOf* aof_node = make_node(AstAddressOf, Ast_Kind_Address_Of);
            aof_node->token = parser->curr->type == '^' ? expect_token(parser, '^') : expect_token(parser, '&'); // HACK
            aof_node->expr  = parse_factor(parser);

            retval = (AstTyped *) aof_node;
            break;
        }

        case '.': {
            if (parse_possible_struct_literal(parser, NULL, &retval)) return retval;
            if (parse_possible_array_literal(parser, NULL, &retval))  return retval;
            if (parse_possible_unary_field_access(parser, &retval))   break;
            goto no_match;
        }

        case Token_Type_Tilde_Tilde: {
            AstUnaryOp* ac_node = make_node(AstUnaryOp, Ast_Kind_Unary_Op);
            ac_node->operation = Unary_Op_Auto_Cast;
            ac_node->token = expect_token(parser, Token_Type_Tilde_Tilde);
            ac_node->expr = parse_factor(parser);

            retval = (AstTyped *) ac_node;
            break;
        }

        case Token_Type_Keyword_Cast: {
            AstUnaryOp* cast_node = make_node(AstUnaryOp, Ast_Kind_Unary_Op);
            cast_node->operation = Unary_Op_Cast;
            cast_node->token = expect_token(parser, Token_Type_Keyword_Cast);

            expect_token(parser, '(');
            cast_node->type_node = parse_type(parser);

            if (peek_token(0)->type == ',') {
                expect_token(parser, ',');
                cast_node->expr = parse_expression(parser, 0);
                expect_token(parser, ')');

            } else {
                expect_token(parser, ')');
                cast_node->expr = parse_factor(parser);
            }

            retval = (AstTyped *) cast_node;
            break;
        }

        case Token_Type_Keyword_Sizeof: {
            AstSizeOf* so_node = make_node(AstSizeOf, Ast_Kind_Size_Of);
            so_node->token = expect_token(parser, Token_Type_Keyword_Sizeof);
            so_node->so_ast_type = (AstType *) parse_type(parser);
            so_node->type_node = (AstType *) &parser->context->basic_types.type_i32;

            retval = (AstTyped *) so_node;
            break;
        }

        case Token_Type_Keyword_Alignof: {
            AstAlignOf* ao_node = make_node(AstAlignOf, Ast_Kind_Align_Of);
            ao_node->token = expect_token(parser, Token_Type_Keyword_Alignof);
            ao_node->ao_ast_type = (AstType *) parse_type(parser);
            ao_node->type_node = (AstType *) &parser->context->basic_types.type_i32;

            retval = (AstTyped *) ao_node;
            break;
        }

        case Token_Type_Keyword_Typeof: {
            retval = (AstTyped *) parse_typeof(parser);
            break;
        }

        case Token_Type_Symbol: {
            if (parse_possible_quick_function_definition(parser, &retval)) {
                retval->flags |= Ast_Flag_Function_Is_Lambda;
                ENTITY_SUBMIT(retval);
                break;
            }

            OnyxToken* sym_token = expect_token(parser, Token_Type_Symbol);
            AstTyped* sym_node = make_node(AstTyped, Ast_Kind_Symbol);
            sym_node->token = sym_token;

            retval = sym_node;
            break;
        }

        case Token_Type_Literal_Integer:
            retval = (AstTyped *) parse_int_literal(parser);
            break;

        case Token_Type_Literal_Float:
            retval = (AstTyped *) parse_float_literal(parser);
            break;

        case Token_Type_Literal_String: {
            AstStrLit* str_node = make_node(AstStrLit, Ast_Kind_StrLit);
            str_node->token     = expect_token(parser, Token_Type_Literal_String);
            str_node->data_id   = 0;
            str_node->flags    |= Ast_Flag_Comptime;

            ENTITY_SUBMIT(str_node);

            retval = (AstTyped *) str_node;
            break;
        }

        case Token_Type_Literal_True: {
            AstNumLit* bool_node = make_node(AstNumLit, Ast_Kind_NumLit);
            bool_node->type_node = (AstType *) &parser->context->basic_types.type_bool;
            bool_node->token = expect_token(parser, Token_Type_Literal_True);
            bool_node->value.i = 1;
            bool_node->flags |= Ast_Flag_Comptime;
            retval = (AstTyped *) bool_node;
            break;
        }

        case Token_Type_Literal_False: {
            AstNumLit* bool_node = make_node(AstNumLit, Ast_Kind_NumLit);
            bool_node->type_node = (AstType *) &parser->context->basic_types.type_bool;
            bool_node->token = expect_token(parser, Token_Type_Literal_False);
            bool_node->value.i = 0;
            bool_node->flags |= Ast_Flag_Comptime;
            retval = (AstTyped *) bool_node;
            break;
        }

        case Token_Type_Keyword_Package: {
            if (!parser->allow_package_expressions)
                ONYX_WARNING(peek_token(-1)->pos, "Use of deprecated feature: package expression.");

            retval = (AstTyped *) parse_package_expression(parser);
            break;
        }

        case Token_Type_Keyword_Macro: {
            retval = (AstTyped *) parse_macro(parser);
            break;
        }

        case Token_Type_Keyword_Do: {
            OnyxToken* do_token = expect_token(parser, Token_Type_Keyword_Do);
            AstDoBlock* do_block = make_node(AstDoBlock, Ast_Kind_Do_Block);
            do_block->token = do_token;
            do_block->type_node = (AstType *) &parser->context->basic_types.type_auto_return;

            if (consume_token_if_next(parser, Token_Type_Right_Arrow)) {
                do_block->type_node = parse_type(parser);
            }

            if (parser->curr->type != '{') {
                AstBlock *tmp_block = make_node(AstBlock, Ast_Kind_Block);
                tmp_block->token = do_token;

                tmp_block->binding_scope = scope_create(parser->context, parser->current_scope, parser->curr->pos);
                tmp_block->binding_scope->name = "<anonymous do block>";

                parser->current_scope = tmp_block->binding_scope;
                tmp_block->body = parse_statement(parser);
                parser->current_scope = parser->current_scope->parent;

                do_block->block = tmp_block;

            } else {
                do_block->block = parse_block(parser, 1, NULL);
            }

            retval = (AstTyped *) do_block;
            break;
        }

        case Token_Type_Keyword_Switch: {
            retval = (AstTyped *) parse_switch_stmt(parser, 1);
            break;
        }

        case '[': {
            // HACK CLEANUP
            // :LinearTokenDependent
            OnyxToken *matching = find_matching_paren(parser->curr);
            if (matching->type == ']' &&
                ((matching + 1)->type == '{' || (matching + 1)->type == '(')) {
                AstCodeBlock* code_block = make_node(AstCodeBlock, Ast_Kind_Code_Block);
                code_block->token = expect_token(parser, '[');

                assert(parser->context->builtins.code_type != NULL);
                code_block->type_node = parser->context->builtins.code_type;

                bh_arr_new(parser->context->gp_alloc, code_block->binding_symbols, 4);
                while (!consume_token_if_next(parser, ']')) {
                    if (parser->hit_unexpected_token) return (AstTyped *) code_block;

                    CodeBlockBindingSymbol sym;
                    sym.symbol = expect_token(parser, Token_Type_Symbol);
                    sym.type_node = NULL;

                    if (consume_token_if_next(parser, ':')) {
                        sym.type_node = parse_type(parser);
                    }

                    bh_arr_push(code_block->binding_symbols, sym);

                    if (parser->curr->type != ']')
                        expect_token(parser, ',');
                }

                if (parser->curr->type == '{') {
                    code_block->code = (AstNode *) parse_block(parser, 1, NULL);
                    ((AstBlock *) code_block->code)->rules = Block_Rule_Code_Block;
                } else {
                    expect_token(parser, '(');
                    code_block->code = (AstNode *) parse_expression(parser, 1);
                    code_block->is_expression = 1;
                    expect_token(parser, ')');
                }

                retval = (AstTyped *) code_block;
                break;
            }

            // :fallthrough
        }

        case Token_Type_Keyword_Struct:
        case Token_Type_Keyword_Union:
        case '?': {
            AstType *type = parse_type(parser);
            retval = (AstTyped *) type;
            break;
        }

        case '$': {
            AstType **tmp = (AstType **) &retval;
            parse_polymorphic_variable(parser, &tmp);
            break;
        }

        case Token_Type_Literal_Char: {
            AstNumLit* char_lit = make_node(AstNumLit, Ast_Kind_NumLit);
            char_lit->flags |= Ast_Flag_Comptime;
            char_lit->type_node = (AstType *) &parser->context->basic_types.type_int_unsized;
            char_lit->token = expect_token(parser, Token_Type_Literal_Char);
            char_lit->was_char_literal = 1;

            char dest[2];
            i32 length = string_process_escape_seqs((char *) &dest, char_lit->token->text, 1);
            char_lit->value.i = (u32) dest[0];

            if (length != 1) {
                ONYX_ERROR(char_lit->token->pos, Error_Critical, "Expected only a single character in character literal.");
            }

            retval = (AstTyped *) char_lit;
            break;
        }

        case '#': {
            if (parse_possible_directive(parser, "file_contents")) {
                AstFileContents* fc = make_node(AstFileContents, Ast_Kind_File_Contents);
                fc->token = parser->prev - 1;
                fc->filename_expr = parse_expression(parser, 0);
                fc->type = type_make_slice(parser->context, parser->context->types.basic[Basic_Kind_U8]);
